--- a/CV.html
+++ b/CV.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
   <title>CV</title>
   <style>
     * {
@@ -20,8 +20,6 @@
     }
 
     header {
-      padding: 5px;
-      padding-left: 20px;
       background-color: #62929E;
       border: 1px solid #C6C5B9;
       // border-bottom: 3px solid #C6C5B9;
@@ -51,10 +49,6 @@
       margin-left: 5px;
     }
 
-    .offset {
-      margin-left: 15px;
-    }
-
     .flex {
       display: flex;
     }
@@ -67,6 +61,14 @@
       margin: 5px;
     }
 
+    .margin-3 {
+      margin: 3px;
+    }
+
+    .offset {
+      margin-left: 15px;
+    }
+
     .gap {
       margin-left: 50px;
     }
@@ -76,11 +78,29 @@
       font-weight: 300;
     }
 
+    #title {
+      margin: 5px;
+      margin-top: 10px;
+      margin-left: 25px;
+      border-bottom: 1px solid #C6C5B9;
+    }
+
+    #contact {
+      color: #C6C5B9;
+      margin: 5px;
+      margin-left: 45px;
+    }
+
+    #envelope {
+      font-size: 20px;
+    }
+
+
   </style>
 </head>
 <header>
   <h1 id="title">Goia Alexandru</h1>
-  <p class="offset"><b>phone</b>: (+40)74755261</p>
+  <p class="offset" id="contact"><span>☎</span> : (+40)74755261 | <span id="envelope">✉</span> : example@protonmail.com</p>
 </header>
 
 <body>
