--- a/CV.html
+++ b/CV.html
@@ -87,13 +87,20 @@
     }
 
     #contact {
-      color: #C6C5B9;
       margin: 5px;
       margin-left: 45px;
     }
 
+    .contact_color {
+      color: #C6C5B9;
+    }
+
     #envelope {
       font-size: 20px;
+    }
+
+    .avoidwrap {
+      display: inline-block;
     }
 
 
@@ -101,7 +108,7 @@
 </head>
 <header>
   <h1 id="title">Goia Alexandru</h1>
-  <p class="offset" id="contact"><span>☎</span> : (+40)747555261 | <span id="envelope">✉</span> : savormonument@protonmail.com</p>
+  <p class="offset contact_color" id="contact"><span>☎</span> : (+40)747555261 | <span class="avoidwrap"><span id="envelope">✉</span><span class="contact_color"> : savormonument@protonmail.com</span></span></p>
 </header>
 
 <body>
@@ -120,7 +127,7 @@
     <div class="section_description">
       <ul>
         <li>The Informal School of IT</li>
-        <li class="offset"> Java Development module (oop, collections, IO, exceptions, generics etc.)</li>
+        <li class="offset"> Java development module (oop, collections, IO, exceptions, generics etc.)</li>
       </ul>
     </div>
   </div>
