--- a/CV.html
+++ b/CV.html
@@ -12,6 +12,13 @@
 
     body {
       background-color: ##FDFDFF;
+
+      /* Mobile font rescaling */
+      /* stackoverflow.com/questions/20924039/wrong-font-size-when-using-float-right-in-css-on-mobile-safari/22417120#22417120 */
+      text-size-adjust: 200%; 
+      -ms-text-size-adjust: 200%; 
+      -moz-text-size-adjust: 200%; 
+      -webkit-text-size-adjust: 200%;
     }
 
     ul {
@@ -22,13 +29,13 @@
     header {
       background-color: #62929E;
       border: 1px solid #C6C5B9;
-      // border-bottom: 3px solid #C6C5B9;
       box-shadow: 0px 1px 5px #C6C5B9;
       margin-bottom: 15px;
     }
 
     .section {
       margin: 5px;
+      font-size: 17px;
     }
 
     .section_header {
@@ -69,9 +76,8 @@
       margin-left: 50px;
     }
 
-    .inline {
-      vertical-align: top;
-      display: inline-block;
+    .flex {
+      display: flex;
     }
 
     .highlight {
@@ -138,8 +144,8 @@
 
   <div class="section">
     <h3 class="section_header">Skills:</h3>
-    <div class="section_description" id="skills_section">
-      <div class="inline">
+    <div class="flex section_description" id="skills_section">
+      <div>
         <ul>
           <li>Python</li>
           <li>Rust</li>
@@ -148,7 +154,7 @@
           <li>Java</li>
         </ul>
       </div>
-      <div class="gap inline">
+      <div class="gap">
         <ul>
           <li>Bash</li>
           <li>Linux</li>
@@ -157,7 +163,7 @@
           <li>OOP</li>
         </ul>
       </div>
-      <div class="gap inline">
+      <div class="gap">
         <ul>
           <li>HTTP</li>
           <li>HTML/CSS</li>
