--- a/CV.html
+++ b/CV.html
@@ -95,7 +95,7 @@
     #contact {
       color: #C6C5B9;
       margin: 5px;
-      margin-left: 45px;
+      margin-left: 25px;
     }
 
     #envelope {
@@ -106,7 +106,7 @@
 </head>
 <header>
   <h1 id="title">Goia Alexandru</h1>
-  <p class="offset" id="contact"><span>☎</span> : (+40)747555261 | <span id="envelope">✉</span> : savormonument@protonmail.com</p>
+  <p class="" id="contact"><span>dob</span> : 16 may 1995 | <span>☎</span> : (+40)747555261 | <span id="envelope">✉</span> : savormonument@protonmail.com</p>
 </header>
 
 <body>
@@ -114,7 +114,7 @@
     <h3 class="section_header">Education:</h3>
     <div class="section_description">
       <ul>
-        <li>Nicolae Balcescu Theoretical High School</li>
+        <li>Nicolae Balcescu Theoretical High School (2010-2014)</li>
         <li class="offset"> profile: Mathematics and Computer Science</li>
       </ul>
     </div>
