--- a/CV.html
+++ b/CV.html
@@ -111,11 +111,20 @@
 
 <body>
   <div class="section">
+    <h3 class="section_header">Experience:</h3>
+    <div class="section_description">
+      <ul>
+        <li>Technical University of Cluj-Napoca</li>
+        <li class="offset"> <i>Software Engineer - 4 months</i></li>
+      </ul>
+    </div>
+  </div>
+  <div class="section">
     <h3 class="section_header">Education:</h3>
     <div class="section_description">
       <ul>
         <li>Nicolae Balcescu Theoretical High School (2010-2014)</li>
-        <li class="offset"> profile: Mathematics and Computer Science</li>
+        <li class="offset"> <i>Mathematics and Computer Science</i></li>
       </ul>
     </div>
   </div>
@@ -167,6 +176,7 @@
         <ul>
           <li>HTTP</li>
           <li>HTML/CSS</li>
+          <li>Active Directory</li>
         </ul>
       </div>
     </div>
