--- a/CV.html
+++ b/CV.html
@@ -105,7 +105,7 @@
   </style>
 </head>
 <header>
-  <h1 id="title">Goia Alexandru</h1>
+  <h1 id="title">Goia Alexandru Raul</h1>
   <p class="" id="contact"><span>dob</span> : 16 may 1995 | <span>☎</span> : (+40)747555261 | <span id="envelope">✉</span> : savormonument@protonmail.com</p>
 </header>
 
