--- a/CV.html
+++ b/CV.html
@@ -68,6 +68,10 @@
       margin: 3px;
     }
 
+    .mt-5 {
+      margin-top: 5px;
+    }
+
     .offset {
       margin-left: 15px;
     }
@@ -115,7 +119,7 @@
     <div class="section_description">
       <ul>
         <li>Technical University of Cluj-Napoca</li>
-        <li class="offset"> <i>Software Engineer - 4 months</i></li>
+        <li class="offset"><i>Software Engineer - 6 months(ongoing)</i></li>
       </ul>
     </div>
   </div>
@@ -125,6 +129,10 @@
       <ul>
         <li>Nicolae Balcescu Theoretical High School (2010-2014)</li>
         <li class="offset"> <i>Mathematics and Computer Science</i></li>
+      </ul>
+      <ul class="mt-5">
+        <li>Technical University of Cluj-Napoca<i> (ongoing)</i></li>
+        <li class="offset"><i>Faculty of Electronics, Telecommunications and Information Technology</i></li>
       </ul>
     </div>
   </div>
@@ -211,16 +219,10 @@
     <h3 class="section_header">Interests:</h3>
     <div class="section_description">
       <ul>
-        <li>Gaming</li>
         <li>Hiking</li>
         <li>This guy vims</li>
       </ul>
     </div>
   </div>
-
-
-
-
 </body>
-
 </html>
