--- a/CV.html
+++ b/CV.html
@@ -12,6 +12,8 @@
 
     body {
       background-color: ##FDFDFF;
+      margin: auto;
+      max-width: 800px;
 
       /* Mobile font rescaling */
       /* stackoverflow.com/questions/20924039/wrong-font-size-when-using-float-right-in-css-on-mobile-safari/22417120#22417120 */
