--- a/CV.html
+++ b/CV.html
@@ -203,6 +203,7 @@
               <li>Fast learner</li>
               <li>Analitical</li>
               <li>Creative</li>
+              <li>Resolute</li>
             </ul>
           </div>
           <div class="gap">
