--- a/CV.html
+++ b/CV.html
@@ -40,6 +40,10 @@
       font-size: 17px;
     }
 
+    .indent {
+      text-indent: 30px;
+    }
+
     .section_header {
       // color: black;
       padding: 3px;
@@ -202,11 +206,13 @@
               <li>Curios</li>
               <li>Fast learner</li>
               <li>Analitical</li>
-              <li>Creative</li>
-              <li>Resolute</li>
             </ul>
           </div>
           <div class="gap">
+            <ul>
+              <li>Creative</li>
+              <li>Resolute</li>
+            </ul>
           </div>
         </div>
     </div>
@@ -241,12 +247,20 @@
 
 
   <div class="section">
-    <h3 class="section_header">Interests:</h3>
+    <h3 class="section_header">About me:</h3>
     <div class="section_description">
-      <ul>
-        <li>Hiking</li>
-        <li>This guy vims</li>
-      </ul>
+      <p class="indent">Aware of the experience this position requires, I express my availability to fill in when
+      additional staff is needed for a your projects.</p>
+      <p class="indent">I am ambitions and hard working, problem solving oriented and managed to deliver all the
+      projects i was involved in. I have analitycal thinking, and I am very passionate about technologies, therefore I
+      am willing to go the extra
+      mile to acomplish the tasks required and learn new things. I like challenges, the projects i was involved in
+      required developing dedicated APIs and my team-lead could provide any recommandations necessary(some of
+      the projects are GDPR protected). Also I am familiar with JSON technologies together with both front and backend
+      development.</p>
+      <p class="indent">Through a long time of work experience in development, I have gained many transferrable skills,
+      and I am sure with involvment and dedication i will become a good professional.</p>
+      <p class="indent">This guy vims.</p>
     </div>
   </div>
 </body>
